feat: continuação da construção do projeto

--- a/index.html
+++ b/index.html
@@ -21,16 +21,13 @@
             <p>Você não criou nenhum quizz ainda :(</p>
             <button class="pointer">Criar Quizz</button>
         </section>
-
-        <section class="galeriaDeQuizz">
+        <div class="divisaoGaleria">
             <p>Todos os Quizzes</p>
-            <div class="quizz pointer"></div>
+        </div>
+        <section class="galeriaDeQuizz">
         </section>
     </main>
-
-
-
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
